- fixed bug that prevented setting the membershipprovider's ApplicationName property at runtime
  (MySQL bug #59438, Oracle bug #11770465)
- fixed MySqlConnectionStringBuilder.ContainsKey to return true for any alternative versions
  of a keyword (MySQL bug #59835, Oracle bug #11766671)
- fixed calculation of precision and scale for decimal columns
  (MySQL bug #59989, Oracle bug #11776346)

Version 6.2.4
- Fix authorization popup after modifying stored procedure in VS (Bug #44715)
- Dispose EventLog after use in MySql.Web.dll provider classes, to avoid wasting resources
  (Bug #55793)
- Fix calculation of lockAge in SessionProvider (Bug #55701)
- fix "There is already an open DataReader..." after exceptions in DataReader.Close()
 (bug#55558)
- Improve performance of MySqlHelper.EscapeString()
- Handle cases where server returns unparsable (out-of-range) double values
  (Bug#55644)
- Improve performance of write operations (e.g insert) if compression is enabled
  (Bug #48243)
- Improve performance of MySqlHelper.EscapeString()
- Fix membership provider creation failure, when default database character set is different from latin1 (Bug #53174)
- Fix "Connection must be valid and open" exception When UpdateBatchSize > 1 
  and MySqlDataAdapter is not using an open connection (Bug #38411)
- Make sure MySqlDataAdapter.Update() works for custom stored procedure driven update commands 
  that make use of UpdateRowSource.FirstReturnedRecord (Bug#54895)
- Ensure exceptions are not silently eaten inside MySqlDataReader.Read()  (Bug#53439)
- Cancel query in ThreadAbortException handler (Bug#54012)
- Call DataTable.AcceptChanges() for affected tables at the end of MySqlAdapter.Update, 
  to match the documented IDataAdater behavior (bug#54863)
- Fix race condition (concurrent reading/modification of the same DataSet) in StoredProcedure.GetParameters()
  (bug#49118)
- Fix problems with MySqlDataAdapter insert command, when batch size is > 1, and 